<resources>
    <string name="app_name">uCollect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuário</string>
    <string name="nav_header_subtitle">usuario@teste.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Empresas</string>
    <string name="menu_gallery">Produtos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="qual_a_sua_conta">Qual é a sua conta?</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="junte_se_a_n_s">Junte-se a nós!</string>
    <string name="continuar">Continuar</string>
    <string name="tenho_uma_conta">Tenho uma conta</string>
    <string name="digite_seu_nome_e_senha">Digite seu nome e senha</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cadastrar_nova">Cadastrar nova</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="campo_obridatorio">Campo Obrigatorio!</string>

    <string name="facebook_app_id">788232871638616</string>
    <string name="fb_login_protocol_scheme">fb788232871638616</string>


</resources>
