<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".apresentacao.activities.RegistroActivity" android:id="@+id/cl_root_registro_activity"
        android:padding="16dp">

    <TextView
            android:text="@string/digite_seu_nome_e_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_logo_registro"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:srcCompat="@drawable/recycle_png"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" android:textColor="@color/colorAccent" android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/txtInput_nome_registro"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_logo_registro"
            app:layout_constraintBottom_toTopOf="@+id/edtxt_senha_registro"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_completo"
                android:id="@+id/edtxt_nome_registro"
                android:background="@drawable/dotted"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtxt_senha_registro"
            android:hint="@string/senha"
            android:background="@drawable/dotted"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtInput_nome_registro"
            app:layout_constraintBottom_toTopOf="@+id/edtxt_confirma_senha_registro"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtxt_confirma_senha_registro"
            android:hint="@string/confirmar_senha"
            android:background="@drawable/dotted"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtxt_senha_registro" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar_registro"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/cadastrar_nova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cadastrar_registro"
            app:backgroundTint="@color/verde_claro"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancelar_registro" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <Button
            android:text="@string/cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancelar_registro"
            app:backgroundTint="@color/verde_claro"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>